tests/resource/invalid/type/class/type_def_with_private_field.mamba
type MyType
    def private my_field: Int
